--- a/_data/CN.yml
+++ b/_data/CN.yml
@@ -83,7 +83,7 @@ profile:
   order: 1
   title: 概述
   description: |
-    I am looking for an end-of-studies internship for 4-6 months.
+    我正在寻找一份为期 4 至 6 个月的毕业实习工作。
     
 experience:
   show: false
