--- a/_data/CN.yml
+++ b/_data/CN.yml
@@ -14,7 +14,7 @@ contact:
 
   gender: 女                 # gender or pronoun
   birthday: 2000/11/28                # birthday
-  nationality:  中国           # nationality
+  nationality:  中国(党员)           # nationality
   visa: 欧盟                # passport visa
   drivinglicense:          # driving licence
 
@@ -84,7 +84,7 @@ profile:
   title: 概述
   description: |
     我正在寻找一份为期 4 至 6 个月的毕业实习工作。
-    
+    更多详细：https://xiang-28.github.io/online-resume/CN
 experience:
   show: false
   order: 2
@@ -393,7 +393,7 @@ evaluation:
   order: 13
   title: 自我评价
   description: |
-    政治面貌为党员。乐观开朗，喜欢学习新事物和探索创新解决方案。
+    乐观开朗，喜欢学习新事物和探索创新解决方案。
     我在担任各种学术项目组长的过程中展现出了强大的组织能力和领导才能。这段经历磨练了我独立管理任务的能力，同时确保了高质量的成果。
     乐于助人，喜欢与不同的人互动和交流。
 
