--- a/_data/CN.yml
+++ b/_data/CN.yml
@@ -83,7 +83,7 @@ profile:
   order: 1
   title: 概述
   description: |
-    我正在寻找一份为期 4 至 6 个月的毕业实习工作。
+    我正在寻找一份人工智能相关的工作
     更多详细：https://xiang-28.github.io/online-resume/CN
 experience:
   show: false
