--- a/_data/CN.yml
+++ b/_data/CN.yml
@@ -86,34 +86,68 @@ profile:
     我正在寻找一份人工智能相关的工作
     更多详细：https://xiang-28.github.io/online-resume/CN
 experience:
-  show: false
+  show: true
   order: 2
   title: Experiences
   description: |
     The experiences section in a resume is a section where you list your previous work experiences and accomplishments. It typically includes information about your previous job titles, companies you worked for, the dates of your employment, and your key responsibilities and achievements in each role. This section is important because it gives potential employers a sense of your work history and the skills and expertise you have developed over time. It can also help demonstrate your ability to contribute value to a new organization based on your past achievements.
 
   items:
-    - company: Second Company
-      link: '#'
-      tags: Full-time
-      date: 2018.03 - 2019.03
-      role: Backend Developer
-      location: Beijing
+      - company: 北京智谱华章
+      link: 
+      tags: 实习
+      date: 2024.08 - 2024.11
+      role: 数据标注
+      location: 远程
       description: |
-        Your key responsibilities and achievements in the company.
-        + First
-        + Second
+        提升对数据的理解和处理能力。
+        学习使用各种数据标注工具。
+        为进入数据科学、机器学习、数据分析领域打下坚实的基础。
 
-    - company: First Company
+    - company: WS TECH
       link:
-      tags: Part-time, remote
-      date: 2017.03 - 2018.03
-      role: Backend Developer
-      location: Beijing
+      tags: 实习
+      date: 2024.12 - 2025.03
+      role: 服务机器人的安装与维护
+      location: 巴黎
       description: |
-        Your key responsibilities and achievements in the company.
-        + First
-        + Second
+       Robotics机器人的安装和调试
+        PUDU操作系统培训
+        机器人硬件系统的组装/拆卸
+        机器人售后问题解决
+        
+    - company: WS TECH
+      link:
+      tags: 全职
+      date: 2025.5 - 2025.08
+      role: 售后技术
+      location: 巴黎
+      description: |
+        Robotics机器人的安装和调试
+        机器人售后技术问题解决
+        点单系统售后技术问题
+        
+    # - company: Second Company
+    #   link: '#'
+    #   tags: Full-time
+    #   date: 2018.03 - 2019.03
+    #   role: Backend Developer
+    #   location: Beijing
+    #   description: |
+    #     Your key responsibilities and achievements in the company.
+    #     + First
+    #     + Second
+
+    # - company: First Company
+    #   link:
+    #   tags: Part-time, remote
+    #   date: 2017.03 - 2018.03
+    #   role: Backend Developer
+    #   location: Beijing
+    #   description: |
+    #     Your key responsibilities and achievements in the company.
+    #     + First
+    #     + Second
 
 project:
   show: true
@@ -122,11 +156,11 @@ project:
   description: |
 
   items:
-    - name: 简易扫地机器人
-      link: 
-      tags:
-      date: 2024.7-至今
-      description: 我计划初步做一个简易的扫地机器人，具有扫地和避障功能。
+    # - name: 简易扫地机器人
+    #   link: 
+    #   tags:
+    #   date: 2024.7-至今
+    #   description: 我计划初步做一个简易的扫地机器人，具有扫地和避障功能。
   
     - name: 小型车自动驾驶
       link: 'https://github.com/XIANG-28/DJI-robomaster'
