--- a/_data/CN.yml
+++ b/_data/CN.yml
@@ -283,7 +283,7 @@ education:
     - institution: 山东财经大学
       link:
       date: 2020.9-2023.6
-      major: 金融
+      major: 金融学
       degree: 学士
       description: |
 
