--- a/_data/CN.yml
+++ b/_data/CN.yml
@@ -427,7 +427,7 @@ evaluation:
   order: 13
   title: 自我评价
   description: |
-    乐观开朗，喜欢学习新事物和探索创新解决方案。
+    ENFP，乐观开朗，喜欢学习新事物和探索创新解决方案。
     我在担任各种学术项目组长的过程中展现出了强大的组织能力和领导才能。这段经历磨练了我独立管理任务的能力，同时确保了高质量的成果。
     乐于助人，喜欢与不同的人互动和交流。
 
